tests/snapshots/integration__integration_tests__directives__merge_internal_no_remove.snap
---
source: tests/integration_tests/directives.rs
info:
  program: wt
  args:
    - "--internal"
    - merge
    - main
    - "--no-remove"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mMerging 1 commit to [1mmain[22m @ [2m6551244[22m (no commit/squash/rebase needed)[39m
[107m [0m  * [33m6551244[m Add feature file
[107m [0m   feature.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mmain[22m (1 commit, 1 file, [32m+1[0m)[39m
⚪ Worktree preserved (--no-remove)
